--- a/css/index.html
+++ b/css/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lorem</title>
+    <title>CSS</title>
+    <meta name="author" content="Lewis Ochieng' Ombaka">
+    <meta name="description" content="More about CSS">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I am</h1>
+    <section class="columns">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ea excepturi vero quibusdam distinctio eius, corporis architecto cum itaque dolor.</p>
+        <p>Velit harum, corporis vero rerum voluptas fugiat? Ipsam autem reiciendis perferendis quam obcaecati, a ratione aliquam nisi commodi temporibus quod.</p>
+        <p>Reprehenderit ad veniam enim quasi, nulla iure minus illum magnam, voluptatem officia consequatur alias. Necessitatibus fugit pariatur suscipit molestias id?</p>
+        <p>Aliquam aperiam repellendus commodi facilis, ab dolorum explicabo! Odio modi saepe animi harum. Nostrum quisquam hic cum, accusantium ad rerum.</p>
+    </section>
+    <p>Aut corrupti magnam incidunt perspiciatis non consequatur, ea quisquam? Tenetur minima fugit quaerat mollitia eos optio, omnis a non architecto.</p>
 </body>
 </html>
