--- a/css/index.html
+++ b/css/index.html
@@ -12,6 +12,8 @@
     <section class="columns">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ea excepturi vero quibusdam distinctio eius, corporis architecto cum itaque dolor.</p>
         <p>Velit harum, corporis vero rerum voluptas fugiat? Ipsam autem reiciendis perferendis quam obcaecati, a ratione aliquam nisi commodi temporibus quod.</p>
+        <h2>Next Topic</h2>
+        <p class="quote">🦈Where's my Rug, man?🦈 <span class="nowrap">&#8212; The Dude</span></p>
         <p>Reprehenderit ad veniam enim quasi, nulla iure minus illum magnam, voluptatem officia consequatur alias. Necessitatibus fugit pariatur suscipit molestias id?</p>
         <p>Aliquam aperiam repellendus commodi facilis, ab dolorum explicabo! Odio modi saepe animi harum. Nostrum quisquam hic cum, accusantium ad rerum.</p>
     </section>
