--- a/css/index.html
+++ b/css/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="columns">
+    <!-- <section class="columns">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ea excepturi vero quibusdam distinctio eius, corporis architecto cum itaque dolor.</p>
         <p>Velit harum, corporis vero rerum voluptas fugiat? Ipsam autem reiciendis perferendis quam obcaecati, a ratione aliquam nisi commodi temporibus quod.</p>
         <h2>Next Topic</h2>
@@ -18,5 +18,40 @@
         <p>Aliquam aperiam repellendus commodi facilis, ab dolorum explicabo! Odio modi saepe animi harum. Nostrum quisquam hic cum, accusantium ad rerum.</p>
     </section>
     <p>Aut corrupti magnam incidunt perspiciatis non consequatur, ea quisquam? Tenetur minima fugit quaerat mollitia eos optio, omnis a non architecto.</p>
+    <div class="outer-container">
+        <div class="inner-container">
+            <div class="box absolute">
+                <p>Absolute</p>
+            </div>
+            <div class="box relative">
+                <p>Relative</p>
+            </div>
+            <div class="box fixed">
+                <p>Fixed</p>
+            </div>
+            <div class="box sticky">
+                <p>Sticky</p>
+            </div>
+        </div>
+    </div>
+    <div class="box1"></div> -->
+    <button class="social">🚀</button>
+    <section id="one">
+        <header class="blue">Header One</header>
+        <h2>One</h2>
+    </section>
+    <section id="two">
+        <header class="red">Header Two</header>
+        <h2>Two</h2>
+    </section>
+    <section id="three">
+        <header class="green">Header Three</header>
+        <h2>Three</h2>
+    </section>
+    <footer>
+        <a href="#one">One</a>
+        <a href="#two">Two</a>
+        <a href="#three">Three</a>
+    </footer>
 </body>
 </html>
