--- a/css/index.html
+++ b/css/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="box1"></div> -->
-    <button class="social">🚀</button>
+    <!-- <button class="social">🚀</button>
     <section id="one">
         <header class="blue">Header One</header>
         <h2>One</h2>
@@ -52,6 +52,14 @@
         <a href="#one">One</a>
         <a href="#two">Two</a>
         <a href="#three">Three</a>
-    </footer>
+    </footer> -->
+    <main class="container">
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
+        <div class="box">5</div>
+        <div class="box">6</div>
+    </main>
 </body>
 </html>
