--- a/css/index.html
+++ b/css/index.html
@@ -53,13 +53,19 @@
         <a href="#two">Two</a>
         <a href="#three">Three</a>
     </footer> -->
-    <main class="container">
+    <!-- <main class="container">
         <div class="box">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
         <div class="box">4</div>
         <div class="box">5</div>
         <div class="box">6</div>
-    </main>
+    </main> -->
+    <section class="example">
+        <p>
+            <img src="../pexels-zen-chung-5748671.jpg" width="200" height="200" alt="">
+            Yeah, this is a paragraph
+        </p>
+    </section>
 </body>
 </html>
