--- a/css/index.html
+++ b/css/index.html
@@ -61,11 +61,20 @@
         <div class="box">5</div>
         <div class="box">6</div>
     </main> -->
-    <section class="example">
-        <p>
-            <img src="../pexels-zen-chung-5748671.jpg" width="200" height="200" alt="">
-            Yeah, this is a paragraph
-        </p>
+    <section class="herocontainer">
+        <section class="hero">
+            <figure class="profile-pic-figure">
+                <img src="../pexels-3motional-studio-407102-1081685.jpg" width="800px" height="800px" alt="pat2" title="my Profle Picture">
+                <figcaption>Lewis Ombaka</figcaption>
+            </figure>
+            <h1 class="h1">
+                <span class="nowrap">Hello 👋🏾</span>
+                <span class="nowrap">I'm <span class="lewis">Lewis</span></span>
+            </h1>
+        </section>
     </section>
+    <!-- <section class="example">
+        <img src="../pexels-zen-chung-5748671.jpg" width="200" height="200" alt="pat1">
+    </section> -->
 </body>
 </html>
