--- a/css/index.html
+++ b/css/index.html
@@ -61,7 +61,7 @@
         <div class="box">5</div>
         <div class="box">6</div>
     </main> -->
-    <section class="herocontainer">
+    <!-- <section class="herocontainer">
         <section class="hero">
             <figure class="profile-pic-figure">
                 <img src="../pexels-3motional-studio-407102-1081685.jpg" width="800px" height="800px" alt="pat2" title="my Profle Picture">
@@ -72,9 +72,21 @@
                 <span class="nowrap">I'm <span class="lewis">Lewis</span></span>
             </h1>
         </section>
-    </section>
+    </section> -->
     <!-- <section class="example">
         <img src="../pexels-zen-chung-5748671.jpg" width="200" height="200" alt="pat1">
     </section> -->
+    <header>
+        <h1>Header</h1>
+        <nav><h2>Nav</h2></nav>
+    </header>
+
+    <main>
+        <h2>Main</h2>
+    </main>
+
+    <footer>
+        <h2>Footer</h2>
+    </footer>
 </body>
 </html>
