trial of project card

--- a/card-project/index.html
+++ b/card-project/index.html
@@ -11,29 +11,33 @@
 <body>
     <header>
         <h1>Our Staff</h1>
-        <nav></nav>
+        <nav>
+            <h3><a href="#designer">Designer</a></h3>
+            <h3><a href="#teacher">Teacher</a></h3>
+            <h3><a href="#coder">Coder</a></h3>
+        </nav>
     </header>
     <main>
         <div class="container">
-            <div class="profile 1">
+            <div class="profile 1"  id="designer">
                 <h3>Matt Designer</h3>
-                <img src="pexels-pixabay-415829.jpg" alt="">
+                <img src="pexels-pixabay-415829.jpg" alt="designer">
                 <p>'I design Stuff.'</p>
             </div>
             <div class="profile 2">
                 <h3>Jane Dev Rel</h3>
-                <img src="pexels-pixabay-415829.jpg" alt="">
+                <img src="pexels-pixabay-415829.jpg" alt="teacher" id="teacher">
                 <p>'I teach stuff.'</p>
             </div>
             <div class="profile 3">
                 <h3>Joe Coder</h3>
-                <img src="pexels-pixabay-415829.jpg" alt="">
+                <img src="pexels-pixabay-415829.jpg" alt="coder" id="coder">
                 <p>'I code stuff.'</p>
             </div>
         </div>
     </main>
     <footer>
-        <h4>&copy; Ombaka Co.</h4>
+        <h4>&copy; Ombaka Co. @2024</h4>
     </footer>
 </body>
 </html>
