--- a/css/index.html
+++ b/css/index.html
@@ -82,7 +82,8 @@
     </header>
 
     <main>
-        <h2>Main</h2>
+        <h2>My Heading</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates placeat, aut itaque reiciendis recusandae reprehenderit soluta quod magnam quaerat voluptate obcaecati! Ex, possimus ab aspernatur quae doloribus fuga nam!</p>
     </main>
 
     <footer>
