--- a/js/index.html
+++ b/js/index.html
@@ -10,6 +10,9 @@
 <body>
     <main>
         <h1>My Page</h1>
+        <form action="" method="get">
+            
+        </form>
     </main>
 </body>
 </html>
